projet_gl/src/test/deca/context/invalid/0_02/0_02_1_Type.deca
// Description:
//    Programme test si l'identifier type non déclaré est détecté
//
// Resultats:
//    Ligne 11: No definition for this type identifier: nimportequoi
// 
// Historique:
//    cree le 09/01/2024

{   
   nimportequoi a;
}
